--- a/views/g2.ejs
+++ b/views/g2.ejs
@@ -3,7 +3,24 @@
 
 <!-- Replace with ejs -->
 <%- include('layouts/header'); -%>
+<script>
+  async function callApi() {
+    console.log("this");
+    console.log(this);
+    console.log("this");
+    const rawResponse = await fetch('http://localhost:4001/updateData', {
+    method: 'POST',
+    headers: {
+      'Accept': 'application/json',
+      'Content-Type': 'application/json'
+    },
+    body: this
+  });
+  const content = await rawResponse.json();
 
+  console.log(content);
+  }
+  </script>
 <body>
     <!-- Navigation-->
     <!-- Replace with ejs -->
@@ -97,7 +114,7 @@
               </div>
               <div class="item-2">
                   <div class="input-group">
-                      <input type="text" id="year" name="year"  class="input">
+                      <input type="number" id="year" name="year"  class="input">
                       <label for="year" class="input-label">Year</label>
                   </div>
               </div>
@@ -116,7 +133,9 @@
                 <label for="date" class="form-label">Date</label>
                 <input readonly type="text" id="date" name="date" value="<%= date %>"
                   min="<%=new Date().toISOString().split('T')[0]%>"
-                />
+                onselect="callApi(this)"
+                  />
+
               </div>
               <div>
                   <label for="time" class="form-label">Time</label>
