--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -21,6 +21,11 @@
                         <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
                     <% } %>
 
+                    <% if(global.userType == "examiner"){%>
+                        <li class="nav-item"><a class="nav-link" href="examiner">Examiner</a></li>
+                        <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
+                    <% } %>
+
                 <% } %>
                 
                 <% if(!loggedIn){ %>
