--- a/public/css/external.css
+++ b/public/css/external.css
@@ -219,3 +219,48 @@ main {
     border-radius: 50px;
     border-color: #fff;
 }
+
+.table {
+    color: #fff;
+}
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    box-shadow: 0 20px 20px white;
+    border: black;
+}
+
+.styled-table thead tr {
+    background-color: #2fdab7;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+    color: #ffffff;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #2c8674;
+    color: #ffffff;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+    color: #ffffff;
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+
+}
