--- a/views/g.ejs
+++ b/views/g.ejs
@@ -34,7 +34,11 @@
                 </h1>
                     <% if(data.message == null ) {%>
                         <div class="offset-3 col-6">
-                            <form method="POST" action="/updateData">
+                            <% if(appointment != null){%>
+                                <form action="/updateData" method="POST">
+                                  <% } else{ %> 
+                                    <form class="row g-3" action="/getAppointmentDriver_g" method="GET">
+                                      <% } %> 
                                 <h4 class="mb-5 text-center fs-2 text-black">Personal Information</h4>
                                 <div class="row g-3">
                                     <input id="id" name="id" type="hidden" value=<%= data._id %>>
@@ -76,33 +80,76 @@
                                 <div class="row g-3">
                                     <div class="col-sm-4">
                                         <label for="make" class="form-label text-black">Make</label>
-                                        <input type="text" class="form-control" id="make" name="make" value="<%= data.carDetails.make %>">
+                                        <input type="text" class="form-control" id="make" name="make">
                                         
                                     </div>
                     
                                     <div class="col-sm-4">
                                         <label for="model" class="form-label text-black">Model</label>
-                                        <input type="text" class="form-control" id="model" name="model" value="<%= data.carDetails.model %>">
+                                        <input type="text" class="form-control" id="model" name="model">
                                         
                                     </div>
             
                                     <div class="col-sm-4">
                                         <label for="year" class="form-label text-black">Year</label>
-                                        <input type="text" class="form-control" id="year" name="year" value="<%= data.carDetails.year %>">
+                                        <input type="text" class="form-control" id="year" name="year">
                                         
                                     </div>
                                 </div>
                                 <div class="row g-3">
                                     <div class="col-sm-8">
                                         <label for="plateNo" class="form-label text-black">Plate number</label>
-                                        <input type="text" class="form-control" id="plateNo" name="plateNo" value="<%= data.carDetails.plateNo %>">
+                                        <input type="text" class="form-control" id="plateNo" name="plateNo">
                                         
                                     </div>
                                 </div>
-                                <div class="f-submit">
-                                    <button class="submit" type="submit" style="margin-top:50px"></button>
-                                </div>
-                            </form>
+                                <h3 class="mb-5 text-center fs-2 text-black">Appointment Booking</h3>
+            <div>
+              <%if(appointment != null){%>
+              <div class="col-sm-6">
+                <label for="date" class="form-label text-black">Date</label>
+                <input readonly type="text" id="date" name="date" value="<%= date %>"
+                  min="<%=new Date().toISOString().split('T')[0]%>"
+                />
+              </div>
+              <div>
+                <div class="col-sm-6">
+                  <label for="testType" class="form-label text-black">Test Type</label>
+                  <input type="text" class="form-control" id="testType" name="testType" readonly value="G TEST">
+              </div>
+              <div class="col-sm-6">
+                  <label for="time" class="form-label text-black">Time</label>
+                </div>
+                  <%if(appointment != ""){%>
+                  <select id="time" class="form-control mt-2" name="time">
+                    <% for(let i = 0;i<appointment.length;i++){%>
+                      <option ><%=appointment[i]%></option>
+                    <% }%></select><%}else{ %> 
+                      <h2  class="mb-5 text-center fs-2 text-black">No slots are available on this day!! You can Try on another day.</h2>
+                        <a href="/g"  class="mb-5 text-center fs-2 text-black">Click Here to select another date.</a>
+                      <%}%>
+                  
+                </div>
+                <div class="f-submit">
+                  <button type="submit" id="submit" class="submit"></button>
+              </div>
+                <%} else{%>
+              <div>
+                <label for="date"  class="form-label text-black">Date</label>
+                <input type="date"  id="date" name="date"
+                  min="<%=new Date().toISOString().split('T')[0]%>"
+                />
+              </div>
+              <div class="f-submit">
+                <button type="submit" id="submit" class="submit"></button>
+            </div>
+              <% } %>
+              </div>
+            </form>
+          </div>
+        </div>
+
+</main>
                         </div> 
                     <%} else {%>
                         
