--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -13,11 +13,13 @@
                     <% if(global.userType == "driver"){%>
                         <li class="nav-item"><a class="nav-link" href="g2">G2 Test</a></li>
                         <li class="nav-item"><a class="nav-link" href="g">G Test</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seeResult">See Result</a></li>
                         <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
                     <% } %>
 
                     <% if(global.userType == "admin"){%>
                         <li class="nav-item"><a class="nav-link" href="appointment">Appointment</a></li>
+                        <li class="nav-item"><a class="nav-link" href="seeResultAdmin">See Result</a></li>
                         <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
                     <% } %>
 
