--- a/views/g2.ejs
+++ b/views/g2.ejs
@@ -39,31 +39,31 @@
                     <div class="personal-info">
                       <div class="item-1">
                           <div class="input-group">
-                              <input type="text" id="fName" name="fName"  class="input">
+                              <input type="text" id="fName" name="fName"  class="input" required value=<%=data?.fName%>>
                               <label for="first-name" class="input-label">First Name</label>
                           </div>
                       </div>
                       <div class="item-1">
                           <div class="input-group">
-                              <input type="text" id="lName" name="lName"  class="input">
+                              <input type="text" id="lName" name="lName"  class="input" required value=<%=data?.lName%>>
                               <label for="last-name" class="input-label">Last Name</label>
                           </div>
                       </div>
                       <div class="item-1">
                           <div class="input-group">
-                              <input type="number" id="sin" name="sin"  class="input">
+                              <input type="number" id="sin" name="sin"  class="input" required value=<%=data?.sin%>>
                               <label for="sin" class="input-label">SIN</label>
                           </div>
                       </div>
                       <div class="item-1">
                           <div class="input-group">
-                              <input type="text" id="lNumber" name="lNumber"  class="input">
+                              <input type="text" id="lNumber" name="lNumber"  class="input" required value=<%=data?.lNumber%>>
                               <label for="License-number" class="input-label">License-Number</label>
                           </div>
                       </div>
                       <div class="item-1">
                           <div class="input-group">
-                              <input type="number" id="age" name="age"  class="input">
+                              <input type="number" id="age" name="age"  class="input" required value=<%=data?.age%>>
                               <label for="age" class="input-label" min="18" max="99">Age</label>
                           </div>
                       </div>
@@ -85,25 +85,25 @@
             <div class="car-info">
               <div class="item-2">
                   <div class="input-group">
-                      <input type="text" id="make" name="make"  class="input">
+                      <input type="text" id="make" name="make"  class="input" required value=<%=data?.make%>>
                       <label for="make" class="input-label">Make</label>
                   </div>
               </div>
               <div class="item-2">
                   <div class="input-group">
-                      <input type="text" id="model" name="model"  class="input">
+                      <input type="text" id="model" name="model"  class="input" required value=<%=data?.model%>>
                       <label for="model" class="input-label">Model</label>
                   </div>
               </div>
               <div class="item-2">
                   <div class="input-group">
-                      <input type="text" id="year" name="year"  class="input">
+                      <input type="number" id="year" name="year"  class="input" required value=<%=data?.year%>>
                       <label for="year" class="input-label">Year</label>
                   </div>
               </div>
               <div class="item-2">
                   <div class="input-group">
-                      <input type="text" id="plateNo" name="plateNo"  class="input">
+                      <input type="text" id="plateNo" name="plateNo"  class="input" required value=<%=data?.plateNo%>>
                       <label for="plateNo" class="input-label">Plate-Number</label>
                   </div>          
               </div>
