--- a/views/g.ejs
+++ b/views/g.ejs
@@ -63,10 +63,7 @@
                                 <div class="row g-3">
                                     <div class="col-sm-6">
                                         <label for="age" class="form-label text-black">Age</label>
-                                        <input type="text" class="form-control" id="age" name="age" disabled value=<%=data.age%>>
-                                        <div class="invalid-feedback">
-                                            Valid first name is required.
-                                        </div>
+                                        <input type="number" class="form-control" id="age" name="age" disabled value=<%=data.age%>>
                                     </div>
                     
                                     <!-- <div class="col-sm-6">
@@ -80,26 +77,25 @@
                                 <div class="row g-3">
                                     <div class="col-sm-4">
                                         <label for="make" class="form-label text-black">Make</label>
-                                        <input type="text" class="form-control" id="make" name="make">
-                                        
+                                        <input type="text" class="form-control" id="make" name="make" value=<%=data?.carDetails?.make|| data?.make%>>
                                     </div>
                     
                                     <div class="col-sm-4">
                                         <label for="model" class="form-label text-black">Model</label>
-                                        <input type="text" class="form-control" id="model" name="model">
+                                        <input type="text" class="form-control" id="model" name="model" value=<%=data?.carDetails?.model || data?.model%>>
                                         
                                     </div>
             
                                     <div class="col-sm-4">
                                         <label for="year" class="form-label text-black">Year</label>
-                                        <input type="text" class="form-control" id="year" name="year">
+                                        <input type="number" class="form-control" id="year" name="year" value=<%=data?.carDetails?.year || data?.year%>>
                                         
                                     </div>
                                 </div>
                                 <div class="row g-3">
                                     <div class="col-sm-8">
                                         <label for="plateNo" class="form-label text-black">Plate number</label>
-                                        <input type="text" class="form-control" id="plateNo" name="plateNo">
+                                        <input type="text" class="form-control" id="plateNo" name="plateNo" value=<%=data?.carDetails?.plateNo || data?.plateNo%>>
                                         
                                     </div>
                                 </div>
