--- a/views/seeResult.ejs
+++ b/views/seeResult.ejs
@@ -26,7 +26,7 @@
     <!-- Main Content-->
     <hr/>
     <main>
-        <% if(data.comment != null){%>
+        <% if(data.comment != null){ console.log(data.comment);%>
             <h4 class="mb-5 text-center fs-2 text-black">Personal Information</h4>
                                 <div class="row g-3">
                                     <input id="id" name="id" type="hidden" value=<%= data._id %>>
@@ -38,6 +38,11 @@
                                     <label for="comment" class="form-label text-black">Comment</label>
                                     <input type="text" class="form-control" id="comment" name="comment" disabled value=<%=data.comment%>>
                                 </div>
+                                <div>
+                                    <div class="col-sm-6">
+                                      <label for="testType" class="form-label text-black">Test Type</label>
+                                      <input type="text" class="form-control" id="testType" name="testType" disabled value=<%=data.testType%>>
+                                  </div>
                                 <div class="col-sm-6">
                                     <label for="result" class="form-label text-black">Result</label>
                                     <input type="text" class="form-control" id="result" name="result" disabled value=<%=result%>>
