Added release version v0.0.3
Done All Functinality.

--- a/views/displayResult.ejs
+++ b/views/displayResult.ejs
@@ -19,7 +19,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
                         <h1>Test Your Drive</h1>
-                        <span class="subheading"> Examiner Tab </span>
+                        <span class="subheading">Admin result Tab </span>
                     </div>
                 </div>
             </div>
