--- a/views/examiner.ejs
+++ b/views/examiner.ejs
@@ -8,6 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   	<script>
      function sendData(e){
+      console.log("I have tried for live search");
       fetch('testType',{
         method:'POST',
         headers:{'content-Type':'application/json'},
@@ -51,7 +52,12 @@
     <!-- Main Content-->
     <hr/>
     <main>
-        <input type="text" id="search-box" onkeyup="sendData(this)">
+      <form action="/showSearchData" method="POST">
+        <input type="text" id="searchbox" name="searchbox">
+        <div class="f-submit">
+          <button type="submit" id="submit" class="submit"></button>
+      </div>
+      </form>
         <table class="styled-table">
             <thead>
               <tr>
