--- a/views/seeResult.ejs
+++ b/views/seeResult.ejs
@@ -36,8 +36,9 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <label for="comment" class="form-label text-black">Comment</label>
-                                    <input type="text" class="form-control" id="comment" name="comment" disabled value=<%=data.comment%>>
+                                    <textarea class="form-control" id="comment" name="comment" disabled ><%=data.comment%></textarea>
                                 </div>
+                                
                                 <div>
                                     <div class="col-sm-6">
                                       <label for="testType" class="form-label text-black">Test Type</label>
