--- a/views/examiner-edit.ejs
+++ b/views/examiner-edit.ejs
@@ -34,63 +34,63 @@
                                 <div class="row g-3">
                                     <input id="id" name="id" type="hidden" value=<%= data._id %>>
                                     <div class="col-sm-6">
-                                        <label for="username" class="form-label text-blue">Username</label>
+                                        <label for="username" class="form-label text-white">Username</label>
                                         <input type="text" class="form-control" id="username" name="username" disabled value=<%=data.username%>>
                                     </div>
                                     <div class="col-sm-6">
-                                        <label for="firstName" class="form-label text-black">First name</label>
+                                        <label for="firstName" class="form-label text-white">First name</label>
                                         <input type="text" class="form-control" id="fName" name="firstName" disabled value=<%=data.fName%>>
                                     </div>
                     
                                     <div class="col-sm-6">
-                                        <label for="lastName" class="form-label text-black">Last name</label>
+                                        <label for="lastName" class="form-label text-white">Last name</label>
                                         <input type="text" class="form-control" id="lName" name="lastName" disabled value=<%=data.lName%>>
                                     </div>
                                 </div>
                               
                                 <br class="row g-3">
                                     <div class="col-sm-6">
-                                        <label for="age" class="form-label text-black">Age</label>
+                                        <label for="age" class="form-label text-white">Age</label>
                                         <input type="text" class="form-control" id="age" name="age" disabled value=<%=data.age%>>
                                 </div>
 
                                 <h4 class="mb-5 text-center fs-2 text-black">Car Information</h4>
                                 <div class="row g-3">
                                     <div class="col-sm-4">
-                                        <label for="make" class="form-label text-black">Make</label>
+                                        <label for="make" class="form-label text-white">Make</label>
                                         <input type="text" class="form-control" id="make" name="make" disabled value=<%=data.carDetails.make%>>
                                         
                                     </div>
                     
                                     <div class="col-sm-4">
-                                        <label for="model" class="form-label text-black">Model</label>
+                                        <label for="model" class="form-label text-white">Model</label>
                                         <input type="text" class="form-control" id="model" name="model" disabled value=<%=data.carDetails.model%>>
                                         
                                     </div>
             
                                     <div class="col-sm-4">
-                                        <label for="year" class="form-label text-black">Year</label>
+                                        <label for="year" class="form-label text-white">Year</label>
                                         <input type="text" class="form-control" id="year" name="year" disabled value=<%=data.carDetails.year%>>
                                         
                                     </div>
                                 </div>
                                 <div class="row g-3">
                                     <div class="col-sm-8">
-                                        <label for="plateNo" class="form-label text-black">Plate number</label>
+                                        <label for="plateNo" class="form-label text-white">Plate number</label>
                                         <input type="text" class="form-control" id="plateNo" name="plateNo" disabled value=<%=data.carDetails.plateNo%>>
                                         
                                     </div>
                                 </div>
                                 <div class="row g-3">
                                     <div class="col-sm-8">
-                                        <label for="comment" class="form-label text-black">Comment</label>
+                                        <label for="comment" class="form-label text-white">Comment</label>
                                         <textarea name="comment" class="form-control" id="comment"  rows="5" cols="50" placeholder="Enter your comment here...">
                                         </textarea>
                                     </div>
                                 </div></br>
                                 <div class="row g-3">
                                     <div class="col-sm-8">
-                                        <label for="result" class="form-label text-black">Result</label><br/>
+                                        <label for="result" class="form-label text-white">Result</label><br/>
                                         <input type="radio" name="result" id="result" value="True"> <h5 style="color: black;">PASS</h5>
                                         <input type="radio" name="result" id="result" value="False"> <h5 style="color: black;" >FAIL</h5>
                                     </div>
