--- a/views/seeResult.ejs
+++ b/views/seeResult.ejs
@@ -31,21 +31,21 @@
                                 <div class="row g-3">
                                     <input id="id" name="id" type="hidden" value=<%= data._id %>>
                                     <div class="col-sm-6">
-                                        <label for="firstName" class="form-label text-black">First name</label>
+                                        <label for="firstName" class="form-label text-white">First name</label>
                                         <input type="text" class="form-control" id="fName" name="firstName" disabled value=<%=data.fName%>>
                                 </div>
                                 <div class="col-sm-6">
-                                    <label for="comment" class="form-label text-black">Comment</label>
+                                    <label for="comment" class="form-label text-white">Comment</label>
                                     <textarea class="form-control" id="comment" name="comment" disabled ><%=data.comment%></textarea>
                                 </div>
                                 
                                 <div>
                                     <div class="col-sm-6">
-                                      <label for="testType" class="form-label text-black">Test Type</label>
+                                      <label for="testType" class="form-label text-white">Test Type</label>
                                       <input type="text" class="form-control" id="testType" name="testType" disabled value=<%=data.testType%>>
                                   </div>
                                 <div class="col-sm-6">
-                                    <label for="result" class="form-label text-black">Result</label>
+                                    <label for="result" class="form-label text-white">Result</label>
                                     <input type="text" class="form-control" id="result" name="result" disabled value=<%=result%>>
                                 </div>
                                 <% } else{ %> 
